Text to Speech Update

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,10 @@ dependencies:
   flutter_tts: ^3.8.5
   cupertino_icons: ^1.0.8
   audioplayers: ^5.2.1
+  translator: ^0.1.7
   flutter_localizations:
     sdk: flutter
+
 
 
 dev_dependencies:
