--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+<uses-permission android:name="android.permission.INTERNET" />
+xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="risei"
         android:name="${applicationName}"
