--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  share_plus: ^7.0.0
   intl: ^0.20.2
   shared_preferences: ^2.2.2
   file_picker: ^6.0.0
